Fix menu overlapping content on small screens

--- a/src/components/organisms/sidebar/sidebar.scss
+++ b/src/components/organisms/sidebar/sidebar.scss
@@ -99,11 +99,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      position: absolute;
-      z-index: 1;
       width: 100%;
-      left: 0;
-      right: 0;
       border: 0;
       background-color: $color-BEG-light;
       color: $color-text;
